# youngirobot

./: README.md  activate  youngirobot_escaneo_live.launch
multi_robot/: CMakeLists.txt  package.xml
multi_robot/launch/: amcl_robot1.launch  amcl_robot2.launch  main.launch  multi_robot.launch  one_robot.launch  youngirobot1_escaneo.launch  youngirobot1_escaneo_live.launch  youngirobot2_escaneo.launch  youngirobot2_escaneo_live.launch
multi_robot/maps/: my_world_map.pgm  tb3_hospital_map.pgm  tb3_hospital_map.yaml
multi_robot/param/: costmap_common_params_burger_robot1.yaml  costmap_common_params_burger_robot2.yaml  global_costmap_params_robot1.yaml  global_costmap_params_robot2.yaml  local_costmap_params_robot1.yaml  local_costmap_params_robot2.yaml
multi_robot/rviz/: robot1.rviz  robot2.rviz
multi_robot/urdf/: robot1.gazebo.xacro  robot1.urdf.xacro  robot2.gazebo.xacro  robot2.urdf.xacro
ws_ros_web/my_first_rosweb/: index.html  main.js
ws_ros_web/prueba_acciones/: index.html  main.js
ws_ros_web/prueba_camara/: index.html  main.js
ws_ros_web/prueba_mapa/: index.html  main.js
ws_ros_web/prueba_services/: index.html  main.js
youngiRobot/: CMakeLists.txt  package.xml
youngiRobot_Escaneo/: CMakeLists.txt  package.xml
youngiRobot_Escaneo/launch/: my_navigation_stack.launch  provide_map.launch
youngiRobot_Escaneo/param/: costmap_common_params_burger.yaml
youngiRobot_Navegacion/: CMakeLists.txt  ini.txt  package.xml  tb3_hospital_map.psd
youngiRobot_Navegacion/launch/: turtlebot3_my_world.launch
youngiRobot_Navegacion/move_to_goal/: Terminales.txt
youngiRobot_Navegacion/move_to_goal/launch/: move_to_goal.launch
youngiRobot_Navegacion/move_to_goal/src/: move_to_goal.py  punto.py
youngiRobot_Navegacion/world/: my_world.world
youngiRobot_Navegación/map/my_first_gazebo_world/world/: my_world.world
youngiRobot_Navegación/src/: move_to_goal.py
youngiRobot_Web/Web_YoungiRobot_v3/: admin_page.php  notificaciones.html
youngiRobot_Web/Web_YoungiRobot_v3/Backend/: home.php  logout.php
youngiRobot_Web/Web_YoungiRobot_v3/assets/img/: hero-img.psd
youngiRobot_Web/Web_YoungiRobot_v3/assets/js/: accion.js
youngirobot/: package.xml
youngirobot_desinfeccion/: CMakeLists.txt  package.xml  publicar.py  publicar2.py  spray.py
youngirobot_desinfeccion/turtlebot3_core/: turtlebot3_burger.h  turtlebot3_core.ino  turtlebot3_core_config.h
youngirobot_escaneo/: CMakeLists.txt  package.xml
youngirobot_escaneo/launch/: provide_map.launch  youngirobot_escaneo.launch  youngirobot_escaneo_live.launch
youngirobot_escaneo/maps/: entorno.pgm  entorno.yaml  entorno.yaml.pgm  entorno.yaml.yaml  entorno_original.pgm  my_world_map.yaml
youngirobot_escaneo/param/: costmap_common_params_burger.yaml
youngirobot_escaneo/rviz/: my_config.rviz
youngirobot_escaneo2/rviz/: my_config.rviz
youngirobot_escaneo2/world/: hospital.world
youngirobot_fsm/: CMakeLists.txt  package.xml
youngirobot_fsm/launch/: youngirobot_fsm.launch
youngirobot_fsm/src/: fsm.py  punto.py
youngirobot_fsm/youngirobot_fsm/src/: fsm.py
youngirobot_identificacion/: CMakeLists.txt  new_names.names  package.xml
youngirobot_identificacion/checkpoints/: yolov3_train_4.tf.index
youngirobot_identificacion/launch/: gazebo_launch.launch  spawn_human.launch  test_yolo_launch.launch
youngirobot_identificacion/models/clara/: model.config  model.sdf
youngirobot_identificacion/models/clara/meshes/: clara.dae
youngirobot_identificacion/models/joe/: model.config  model.sdf
youngirobot_identificacion/models/joe/meshes/: Joe.dae
youngirobot_identificacion/src/: capturar.py
youngirobot_identificacion/worlds/: lfm.world
youngirobot_monitorizacion/: CMakeLists.txt  package.xml
youngirobot_navegacion_autonoma/: CMakeLists.txt  package.xml
youngirobot_navegacion_autonoma/src/: punto.py
youngirobot_navegacion_indicada/: CMakeLists.txt  package.xml
youngirobot_navegacion_indicada/launch/: youngirobot_navegacion_indicada.launch
youngirobot_navegacion_indicada/src/: move_to_goal.py  youngirobot_navegacion_indicada.py
youngirobot_web/Web_YoungiRobot/: admin_page.php  heridos.html  index.html  login.php  notificaciones.html
youngirobot_web/Web_YoungiRobot/Backend/: envio.php  functions.php  login_b.php  logout.php  select_alerta_resuelto.php  select_alertas.php  select_incidencias.php
youngirobot_web/Web_YoungiRobot/assets/css/: sb-admin.css  style.css
youngirobot_web/Web_YoungiRobot/assets/js/: accion.js  loading.js
youngirobot_web/Web_YoungiRobot/assets/js/demo/: chart-area-demo.js
youngirobot_web/Web_YoungiRobot_v3/: heridos.html  index.html  login.php
youngirobot_web/Web_YoungiRobot_v3/Backend/: db_conn.php  login_b.php
youngirobot_web/Web_YoungiRobot_v3/assets/css/: sb-admin.css  style.css  styleLogIn.css
youngirobot_web/Web_YoungiRobot_v3/assets/img/: mapa.psd
youngirobot_web/Web_YoungiRobot_v3/assets/js/: main.js
youngirobot_web/Web_YoungiRobot_v3/assets/js/demo/: chart-pie-demo.js
youngirobot_web/Web_v3/: admin_page.html  heridos.html  index.html  notificaciones.html
youngirobot_web/Web_v3/Backend/: logout.php
youngirobot_web/Web_v3/assets/css/: estilosPopUp.css  sb-admin.css
youngirobot_web/Web_v3/assets/js/: accion.js
youngirobot_web/Web_v3/assets/js/demo/: datatables-demo.js
youngirobot_web/Wireframe/: Wireframe.drawio  Wireframe_Cliente.drawio
youngirobot_web2/Diseño_Logo/: Logo youngiRobot.psd
youngirobot_web2/Wireframe/: Wireframe_Admin.drawio
