<?xml version="1.0"?>
<package format="2">
  <name>my_navigation_stack</name>
  <version>0.0.0</version>
  <description>The my_navigation_stack package</description>

  <maintainer email="daferfus@upv.edu.es">David Fernández Fuster</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
