<?xml version="1.0"?>
<package format="2">
  <name>youngirobot_desinfeccion</name>
  <version>1.2.1</version>
  <description> ROS packages for the youngirobot_desinfeccion package
  </description>
  <maintainer email="saulmaicas@todo.todo">saulmaicas</maintainer>
  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
<export>
</export>
</package>