< ?xmlversion="1.0"?>
<package format="2">
  <name>youngiRobot</name>
  <version>1.2.1</version>
  <description> ROS packages for the youngiRobot (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="daferfus@epsg.upv.es">David F.F.</author>
  <maintainer email="daferfus@epsg.upv.es">David F.F.</maintainer>
<url type="website">http://xxx </url>   
<url type="repository">https://github.com/Miguelzaragoza/Proyecto2_Robotica</url>
<buildtool_depend>catkin</buildtool_depend>
  <exec_depend>youngiRobot_Desinfecci贸n</exec_depend>
  <exec_depend>youngiRobot_Identificaci贸n</exec_depend>
  <exec_depend>youngiRobot_Monitorizaci贸n</exec_depend>
  <exec_depend>youngiRobot_Navegaci贸n</exec_depend>
<export><metapackage/></export>
</package>